--- a/Pepperbot/wwwroot/index.html
+++ b/Pepperbot/wwwroot/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <base href="/" />
     <!-- Icon & Title -->
-    <title>Icons Discord Unofficial</title>
-    <link rel="icon" href="icon.png">
+    <title>Turtlepaw's Workshop</title>
+    <link rel="icon" href="https://turtlepaw.is-from.space/r/tws.png">
     <!-- CSS -->
     <link href="css/spinner.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
@@ -17,11 +17,13 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
     <!-- Embed -->
-    <meta content="Icons Discord" property="og:title" />
-    <meta content="Welcome to Icons, where we have one of the best minimalistic, handcrafted, and beautiful Icons. We are known as the best source for icons & emotes on Discord." property="og:description" />
-    <meta content="/" property="og:url" />
-    <meta content="/icon.png" property="og:image" />
-    <meta content="#5865F2" data-react-helmet="true" name="theme-color" />
+    <meta content="Turtlepaw's Workshop" property="og:title" />
+    <meta content="Devloping Discord bots since 2021. [Join our Discord](https://discord.gg/x2u5E7KhJh) to learn more." property="og:description" />
+    <meta content="https://cordbot.xyz/" property="og:url" />
+    <meta content="https://turtlepaw.is-from.space/r/tws.png" property="og:image" />
+    <meta content="#ADB986" data-react-helmet="true" name="theme-color" />
+    <!-- Widgetbot -->
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </head>
 
 <body>
